--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 /JAVA_POO/Aula01HelloWorld/dist/
+/JAVA_POO/Aula02Servlets/nbproject/private/
+/JAVA_POO/Aula02Servlets/build/
+/JAVA_POO/Aula02Exercicio/nbproject/private/
+/JAVA_POO/Aula02Exercicio/build/
